--- a/app/src/main/res/layout/letsmessage_row.xml
+++ b/app/src/main/res/layout/letsmessage_row.xml
@@ -3,7 +3,8 @@
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
-                                                   android:layout_height="120dp">
+                                                   android:layout_height="120dp"
+        android:background="@android:color/darker_gray">
 
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="72dp"
