--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,54 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+
+
+    <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+<androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/theme_2"
+        android:background="@color/Background"
         tools:context=".MainActivity">
 
     <EditText
+            android:id="@+id/editText_login_email"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editText_login_email"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="236dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/rounded_edittext_register_login"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
             android:paddingLeft="20dp"
-            android:layout_marginEnd="16dp" android:hint="Email" android:textColor="#000000"
-            android:textColorHint="#000000" android:background="@drawable/rounded_edittext_register_login"
+            android:textColor="@color/theme_1"
+            android:textColorHint="@color/theme_1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
 
-    />
+            />
+
     <EditText
+            android:id="@+id/editText_login_password"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:inputType="textPassword"
-            android:ems="10"
-            app:layout_constraintStart_toStartOf="@+id/editText_login_email"
-            app:layout_constraintEnd_toEndOf="@+id/editText_login_email" android:id="@+id/editText_login_password"
             android:layout_marginTop="24dp"
+            android:background="@drawable/rounded_edittext_register_login"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
             android:paddingLeft="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_login_email" app:layout_constraintHorizontal_bias="0.0"
-            android:hint="Password" android:textColor="#000000" android:textColorHint="#000000"
-            android:background="@drawable/rounded_edittext_register_login"/>
+            android:textColor="@color/theme_1"
+            android:textColorHint="@color/theme_1"
+            app:layout_constraintEnd_toEndOf="@+id/editText_login_email"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/editText_login_email"
+            app:layout_constraintTop_toBottomOf="@+id/editText_login_email" />
+
     <Button
-            android:text="LOGIN"
+            android:id="@+id/button_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/editText_login_password" app:layout_constraintEnd_toEndOf="@+id/editText_login_password"
-            android:id="@+id/button_login" android:layout_marginEnd="8dp" android:layout_marginTop="36dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_login_password" app:layout_constraintHorizontal_bias="1.0"
-            android:background="@drawable/rounded_button" android:textColor="@color/theme_2"/>
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_button"
+            android:text="LOGIN"
+            android:textColor="@color/theme_1"
+            app:layout_constraintEnd_toEndOf="@+id/editText_login_password"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/editText_login_password"
+            app:layout_constraintTop_toBottomOf="@+id/editText_login_password" />
+
     <TextView
+            android:id="@+id/textView_create_account"
+            android:layout_width="0dp"
+            android:layout_height="19dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="120dp"
             android:text="Dont have an account?"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            android:id="@+id/textView_create_account" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/button_login" app:layout_constraintEnd_toEndOf="@+id/button_login"
-            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
-            android:textColor="@color/theme_1"/>
+            android:textColor="@color/theme_1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_login"
+            app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+</LinearLayout>
