--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,92 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/theme_2"
-        tools:context=".RegisterActivity">
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:inputType="textPersonName"
-            android:ems="10"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editText_username"
-            android:paddingLeft="20dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp" android:hint="Username" android:textColor="#000000"
-            android:textColorHint="#000000" app:layout_constraintHorizontal_bias="0.0"
-            android:background="@drawable/rounded_edittext_register_login" android:layout_marginTop="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/button_photo_select_register"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/editText_email"
-            app:layout_constraintStart_toStartOf="@+id/editText_username"
-            app:layout_constraintEnd_toEndOf="@+id/editText_username"
-            android:paddingLeft="20dp"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/editText_username"
-            app:layout_constraintHorizontal_bias="0.0" android:hint="Email" android:textColorHint="#000000"
-            android:textColor="#000000" android:background="@drawable/rounded_edittext_register_login"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:inputType="textPassword"
-            android:ems="10"
-            app:layout_constraintStart_toStartOf="@+id/editText_email"
-            app:layout_constraintEnd_toEndOf="@+id/editText_email"
-            android:layout_marginTop="24dp"
-            android:paddingLeft="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_email" app:layout_constraintHorizontal_bias="0.0"
-            android:hint="Password" android:textColorHint="#000000" android:textColor="#000000"
-            android:id="@+id/editText_password" android:background="@drawable/rounded_edittext_register_login"/>
-    <Button
-            android:text="SIGN UP"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            app:layout_constraintStart_toStartOf="@id/editText_password"
-            app:layout_constraintEnd_toEndOf="@+id/editText_password"
-            android:id="@+id/button_signup"
-            app:layout_constraintHorizontal_bias="0.512"
-            android:textColor="@color/theme_2" android:layout_marginTop="28dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_password" android:background="@drawable/rounded_button"/>
-    <TextView
-            android:text="Already have an account?"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView_already_have_acc" app:layout_constraintStart_toStartOf="@+id/button_signup"
-            android:textColor="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="@+id/button_signup"
-            app:layout_constraintHorizontal_bias="0.059"
-            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/button_signup"/>
-    <Button
-            android:text="LOGIN"
-            android:layout_width="154dp"
-            android:layout_height="28dp"
-            android:id="@+id/button_register_login"
-            app:layout_constraintEnd_toEndOf="@+id/button_signup" android:layout_marginEnd="8dp"
-            android:background="@drawable/rounded_button"
-            android:textColor="@color/theme_2"
-            app:layout_constraintStart_toEndOf="@+id/textView_already_have_acc" android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/textView_already_have_acc"/>
-    <Button
-            android:text="Select Photo"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/button_photo_select_register" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
-            android:background="@drawable/rounded_photo_button"/>
-    <de.hdodenhof.circleimageview.CircleImageView android:layout_width="150dp" android:layout_height="150dp"
-                                                  app:civ_border_width="4dp"
-                                                  app:layout_constraintEnd_toEndOf="@+id/button_photo_select_register"
-                                                  app:layout_constraintStart_toStartOf="@+id/button_photo_select_register"
-                                                  app:layout_constraintTop_toTopOf="@+id/button_photo_select_register"
-                                                  app:layout_constraintBottom_toBottomOf="@+id/button_photo_select_register"
-                                                  android:id="@+id/selectphoto_imageview_register"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+
+    <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/Background"
+                tools:context=".RegisterActivity">
+
+            <EditText
+                    android:id="@+id/editText_username"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:background="@drawable/rounded_edittext_register_login"
+                    android:ems="10"
+                    android:hint="Username"
+                    android:inputType="textPersonName"
+                    android:paddingLeft="20dp"
+                    android:textColor="@color/theme_1"
+                    android:textColorHint="#000000"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/button_photo_select_register" />
+
+            <EditText
+                    android:id="@+id/editText_email"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="24dp"
+                    android:background="@drawable/rounded_edittext_register_login"
+                    android:ems="10"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:paddingLeft="20dp"
+                    android:textColor="@color/theme_1"
+                    android:textColorHint="#000000"
+                    app:layout_constraintEnd_toEndOf="@+id/editText_username"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/editText_username"
+                    app:layout_constraintTop_toBottomOf="@+id/editText_username" />
+
+            <EditText
+                    android:id="@+id/editText_password"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="24dp"
+                    android:background="@drawable/rounded_edittext_register_login"
+                    android:ems="10"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:paddingLeft="20dp"
+                    android:textColor="@color/theme_1"
+                    android:textColorHint="#000000"
+                    app:layout_constraintEnd_toEndOf="@+id/editText_email"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/editText_email"
+                    app:layout_constraintTop_toBottomOf="@+id/editText_email" />
+
+            <Button
+                    android:id="@+id/button_signup"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="28dp"
+                    android:background="@drawable/rounded_button"
+                    android:text="SIGN UP"
+                    android:textColor="@color/theme_1"
+                    app:layout_constraintEnd_toEndOf="@+id/editText_password"
+                    app:layout_constraintHorizontal_bias="0.512"
+                    app:layout_constraintStart_toStartOf="@id/editText_password"
+                    app:layout_constraintTop_toBottomOf="@+id/editText_password" />
+
+            <TextView
+                    android:id="@+id/textView_already_have_acc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="Already have an account?"
+                    android:textColor="#FFFFFF"
+                    app:layout_constraintEnd_toEndOf="@+id/button_signup"
+                    app:layout_constraintHorizontal_bias="0.059"
+                    app:layout_constraintStart_toStartOf="@+id/button_signup"
+                    app:layout_constraintTop_toBottomOf="@+id/button_signup" />
+
+            <Button
+                    android:id="@+id/button_register_login"
+                    android:layout_width="154dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="32dp"
+                    android:background="@drawable/rounded_button"
+                    android:text="LOGIN"
+                    android:textColor="@color/theme_1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/button_signup"
+                    app:layout_constraintHorizontal_bias="0.846"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_already_have_acc"
+                    app:layout_constraintVertical_bias="1.0" />
+
+            <Button
+                    android:id="@+id/button_photo_select_register"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_marginTop="24dp"
+                    android:background="@drawable/rounded_photo_button"
+                    android:text="Select Photo"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.498"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/selectphoto_imageview_register"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    app:civ_border_width="4dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/button_photo_select_register"
+                    app:layout_constraintEnd_toEndOf="@+id/button_photo_select_register"
+                    app:layout_constraintStart_toStartOf="@+id/button_photo_select_register"
+                    app:layout_constraintTop_toTopOf="@+id/button_photo_select_register" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+</LinearLayout>
