--- a/app/src/main/res/layout/chat_from_row.xml
+++ b/app/src/main/res/layout/chat_from_row.xml
@@ -5,22 +5,33 @@
 android:layout_marginBottom="12dp">
 
     <TextView
-            android:text="This is my message from the from row. this i what i do"
+            android:id="@+id/textView_chat_from"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView_chat_from"
-            android:background="@drawable/rounded_edittext_register_login"
-            android:padding="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/rounded_chatbox"
             android:maxWidth="240dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageView_from_row" android:layout_marginEnd="16dp"/>
+            android:padding="16dp"
+            android:text="This is my message from the from row. this i what i do"
+            android:textColor="@color/theme_1"
+            app:layout_constraintEnd_toStartOf="@+id/imageView_from_row"
+            app:layout_constraintTop_toTopOf="parent" />
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="25dp"
             android:layout_height="25dp" app:srcCompat="@android:drawable/btn_dialog"
-            app:civ_border_color="@android:color/black"
+            app:civ_border_color="@color/button"
             app:civ_border_width="2dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="12dp" android:id="@+id/imageView_from_row"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
     />
+
+    <TextView
+            android:id="@+id/textView_from_message_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="0000"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView_chat_from"
+            app:layout_constraintEnd_toStartOf="@+id/textView_chat_from" />
 </androidx.constraintlayout.widget.ConstraintLayout>
