--- a/app/src/main/res/layout/chat_to_row.xml
+++ b/app/src/main/res/layout/chat_to_row.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="75dp"
-                                                   android:layout_marginBottom="12dp">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp">
 
 
     <TextView
-            android:text="To messageeee"
+            android:id="@+id/textView_chat_to"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:background="@drawable/rounded_edittext_register_login"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/rounded_chatbox"
+            android:textColor="@color/theme_1"
             android:maxWidth="240dp"
-            android:id="@+id/textView_chat_to"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView_to_row" android:layout_marginStart="16dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.32"/>
+            android:padding="16dp"
+            android:text="To messageeee"
+            app:layout_constraintStart_toEndOf="@+id/imageView_to_row"
+            app:layout_constraintTop_toTopOf="parent" />
+
     <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imageView_to_row"
             android:layout_width="25dp"
-            android:layout_height="25dp" app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="25dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            app:civ_border_color="@color/button"
             app:civ_border_width="2dp"
-            app:civ_border_color="@android:color/black"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/imageView_to_row"
-            app:layout_constraintVertical_bias="0.235" android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
+
+    <TextView
+            android:id="@+id/textView_message_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="0000"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView_chat_to"
+            app:layout_constraintStart_toEndOf="@+id/textView_chat_to" />
 </androidx.constraintlayout.widget.ConstraintLayout>
