--- a/app/src/main/res/layout/letsmessage_row.xml
+++ b/app/src/main/res/layout/letsmessage_row.xml
@@ -1,37 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="120dp"
-        android:background="@android:color/darker_gray">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:background="@drawable/rounded_letsmessage">
 
     <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="72dp"
-            android:layout_height="72dp" app:srcCompat="@drawable/common_full_open_on_phone"
             android:id="@+id/imageView_latestmessage_dp"
-            app:civ_border_width="2dp"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="24dp"
             app:civ_border_color="@android:color/black"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="24dp"
+            app:civ_border_width="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
-    />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/common_full_open_on_phone" />
+
     <TextView
+            android:id="@+id/textView_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView_username" android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/imageView_latestmessage_dp" android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@android:color/transparent"
+            android:textColor="@color/theme_1"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textView_latest_message"
-            android:textColor="@android:color/black" android:textSize="16sp"
-            app:layout_constraintVertical_bias="0.666" android:layout_marginTop="32dp"/>
+            app:layout_constraintStart_toEndOf="@+id/imageView_latestmessage_dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.666" />
+
     <TextView
+            android:id="@+id/textView_latest_message"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/textView_latest_message"
+            android:layout_marginStart="16dp"
+            android:background="@android:color/transparent"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView_latestmessage_dp"
-            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" android:textSize="18sp" android:layout_marginBottom="36dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView_username" android:layout_marginTop="16dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView_username" />
 </androidx.constraintlayout.widget.ConstraintLayout>
