--- a/app/src/main/res/layout/user_row_newmessage.xml
+++ b/app/src/main/res/layout/user_row_newmessage.xml
@@ -1,28 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="wrap_content"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
->
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_letsmessage"
+        >
 
     <TextView
-            android:text="Username"
-            android:textColor="@android:color/black"
+            android:id="@+id/username_newmessage"
             android:layout_width="0dp"
-            android:layout_height="21dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/username_newmessage" app:layout_constraintTop_toTopOf="@+id/imageView_newmessage"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:background="@android:color/transparent"
+            android:text="Username"
+            android:textColor="@color/theme_1"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView_newmessage"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@+id/imageView_newmessage" android:layout_marginStart="24dp"
-            android:textSize="18sp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/imageView_newmessage"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+<!--    <TextView-->
+<!--            android:id="@+id/overlay_user"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="24dp"-->
+<!--            android:background="@color/button"-->
+<!--            android:text="Username"-->
+<!--            android:textColor="@color/theme_1"-->
+<!--            android:visibility="invisible"-->
+<!--            android:textSize="18sp"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/imageView_newmessage"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.0"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/imageView_newmessage"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
     <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imageView_newmessage"
             android:layout_width="50dp"
-            android:layout_height="50dp" app:srcCompat="@android:drawable/btn_dialog"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            app:civ_border_overlay="true"
             app:civ_border_width="2dp"
-            android:layout_marginStart="16dp" android:id="@+id/imageView_newmessage" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/btn_dialog" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
