--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,7 +4,7 @@
 
     <item
             android:id="@+id/menu_new_message"
-            android:icon="@drawable/ic_new_message"
+            android:icon="@drawable/ic_newmessage"
             android:title=""
             app:showAsAction="ifRoom"/>
 
