--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="fill_parent"
+        android:background="@color/Background"
         android:layout_height="fill_parent">
 
 
@@ -15,7 +16,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/Background"
         tools:context=".MainActivity">
 
     <EditText
@@ -77,6 +77,8 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="120dp"
             android:text="Dont have an account?"
+            android:gravity="right"
+            android:paddingRight="24dp"
             android:textColor="@color/theme_1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
